podforping_openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "11"
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"podforping:0.0.2"},"fieldPath":"spec.template.spec.containers[?(@.name==\"podforping\")].image"}]'
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: "2022-12-12T14:25:09Z"
  generation: 20
  labels:
    app: podforping
    app.kubernetes.io/component: podforping
    app.kubernetes.io/instance: podforping
  name: podforping
  namespace: samuelausbildung
  resourceVersion: "1668912"
  uid: 010f29bd-0059-4aa4-8c86-5eea0efb8976
spec:
  progressDeadlineSeconds: 600
  replicas: 4
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: podforping
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deployment: podforping
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: test2
        image: quay.io/wylicil_samuel/podforping@sha256:34140872eeab4af2504022a7474a104618943e40bf49907a208784803fdf14e0
        imagePullPolicy: IfNotPresent
        name: podforping
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8888
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /secrets
          name: sec
          readOnly: true
        - mountPath: /conf
          name: conmap
          readOnly: true
        - mountPath: /secrets2
          name: sec2
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: sec
        secret:
          defaultMode: 420
          secretName: test
      - configMap:
          defaultMode: 420
          name: example
        name: conmap
      - name: sec2
        secret:
          defaultMode: 420
          secretName: test2
