podforping_openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: "2022-12-12T14:25:09Z"
  labels:
    app: podforping
    app.kubernetes.io/component: podforping
    app.kubernetes.io/instance: podforping
  name: podforping
  namespace: samuelausbildung
  resourceVersion: "1563917"
  uid: bfe315c9-95b0-40c5-998f-352983e0989e
spec:
  clusterIP: 172.30.203.118
  clusterIPs:
  - 172.30.203.118
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8888-tcp
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    deployment: podforping
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
